--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "express-session": "^1.17.2",
     "net": "latest",
     "child_process": "latest",
-    "sqlite3": "^5.1.6",
+    "sqlite3": "latest",
     "ejs": "^3.1.9",
     "body-parser": "^1.20.2",
-    "multer": "^1.4.5-lts.2"
+    "multer": "latest"
   },
   "engines": {
     "node": ">=14.0.0"
